# SaveTheValley

./: CMakeLists.txt  CMakePresets.json  README.md
docs/: GameClassDiagram.puml  JuegoDiagramaClases.puml  ScreenClassDiagram.puml
include/: action.h  goblin.h  hero.h  spritecomponent.h  utils.h
src/core/: main.cpp
